# rag_contracts

./: README.md  Untitled.ipynb  api.py  device_info.ipynb  rag.ipynb  requiremets.txt
.ipynb_checkpoints/: rag-checkpoint.ipynb
test/: README.md  pyproject.toml
test/src/test/: crew.py  main.py
